--- a/Dados do Cliente/Dados do Cliente/Dados do Cliente.csproj
+++ b/Dados do Cliente/Dados do Cliente/Dados do Cliente.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Dados_do_Cliente.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Negocio">
       <HintPath>..\AcessoDB\bin\Debug\Negocio.dll</HintPath>
@@ -56,6 +59,12 @@
     <Compile Include="Formularios\frmAgenda.Designer.cs">
       <DependentUpon>frmAgenda.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\frmInicial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmInicial.Designer.cs">
+      <DependentUpon>frmInicial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\frmProduto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +75,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Formularios\frmAgenda.resx">
       <DependentUpon>frmAgenda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\frmInicial.resx">
+      <DependentUpon>frmInicial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmProduto.resx">
       <DependentUpon>frmProduto.cs</DependentUpon>
@@ -80,6 +92,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
