--- a/Dados do Cliente/Dados do Cliente/App.config
+++ b/Dados do Cliente/Dados do Cliente/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Dados_do_Cliente.Properties.Settings.conexaoDB" connectionString="Data Source=AME0556344W10-1\SQLEXPRESS;Initial Catalog=Dados;Integrated Security=True"
+        <add name="Dados_do_Cliente.Properties.Settings.conexaoDB" connectionString="Data Source=AME0556343W10-1\SQLEXPRESS;Initial Catalog=CadastrodeClientes;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
